--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@supabase/supabase-js": "^1.35.6",
     "axios": "^0.27.2",
     "framer-motion": "^7.3.2",
     "next": "^12.3.0",
