--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
     "@supabase/supabase-js": "^1.35.6",
     "axios": "^0.27.2",
+    "faunadb": "^4.7.0",
     "framer-motion": "^7.3.2",
     "next": "^12.3.0",
+    "next-auth": "^4.10.3",
     "prisma": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
