--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "pokemon-reviews",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "next dev -H 0.0.0.0",
-    "build": "next build",
-    "prettier": "prettier -write .",
-    "lint": "next lint"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@chakra-ui/icons": "^2.0.9",
-    "@chakra-ui/react": "^2.3.2",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.4.0",
-    "@supabase/supabase-js": "^1.35.6",
-    "axios": "^0.27.2",
-    "faunadb": "^4.7.0",
-    "framer-motion": "^7.3.2",
-    "next": "^12.3.0",
-    "next-auth": "^4.10.3",
-    "prisma": "^4.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.23.1",
-    "eslint-config-next": "^12.3.0",
-    "prettier": "^2.7.1"
-  }
+	"name": "pokemon-reviews",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "next dev -H 0.0.0.0",
+		"build": "next build",
+		"prettier": "prettier -write .",
+		"lint": "next lint",
+		"start": "next start"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@chakra-ui/icons": "^2.0.9",
+		"@chakra-ui/react": "^2.3.2",
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
+		"@next-auth/prisma-adapter": "^1.0.4",
+		"@prisma/client": "^4.4.0",
+		"@supabase/supabase-js": "^1.35.6",
+		"axios": "^0.27.2",
+		"faunadb": "^4.7.0",
+		"framer-motion": "^7.3.2",
+		"next": "^12.3.0",
+		"next-auth": "^4.10.3",
+		"prisma": "^4.3.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.4.0"
+	},
+	"devDependencies": {
+		"eslint": "^8.23.1",
+		"eslint-config-next": "^12.3.0",
+		"prettier": "^2.7.1"
+	}
 }
