--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "next build",
 		"prettier": "prettier -write .",
 		"lint": "next lint",
-		"start": "next start"
+		"start": "next start",
+		"vercel-build": "prisma generate && prisma migrate deploy && next build"
 	},
 	"keywords": [],
 	"author": "",
