--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 		"build": "next build",
 		"prettier": "prettier -write .",
 		"lint": "next lint",
-		"start": "next start",
-		"vercel-build": "prisma generate && prisma migrate deploy && next build"
+		"start": "next start"
 	},
 	"keywords": [],
 	"author": "",
@@ -27,7 +26,6 @@
 		"framer-motion": "^7.3.2",
 		"next": "^12.3.0",
 		"next-auth": "^4.10.3",
-		"prisma": "^4.4.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.4.0"
@@ -35,6 +33,7 @@
 	"devDependencies": {
 		"eslint": "^8.23.1",
 		"eslint-config-next": "^12.3.0",
-		"prettier": "^2.7.1"
+		"prettier": "^2.7.1",
+		"prisma": "^4.4.0"
 	}
 }
