--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"next-auth": "^4.10.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.4.0"
+		"react-icons": "^4.4.0",
+		"react-textarea-autosize": "^8.3.4"
 	},
 	"devDependencies": {
 		"eslint": "^8.23.1",
