--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"framer-motion": "^7.3.2",
 		"next": "^12.3.0",
 		"next-auth": "^4.10.3",
+		"nextjs-progressbar": "^0.0.16",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.4.0",
