--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"@emotion/react": "^11.10.4",
 		"@emotion/styled": "^11.10.4",
 		"@next-auth/prisma-adapter": "^1.0.4",
-		"@prisma/client": "^4.4.0",
+		"@prisma/client": "^4.5.0",
 		"@supabase/supabase-js": "^1.35.6",
 		"axios": "^0.27.2",
 		"faunadb": "^4.7.0",
@@ -27,6 +27,7 @@
 		"next": "^12.3.0",
 		"next-auth": "^4.10.3",
 		"nextjs-progressbar": "^0.0.16",
+		"nodemailer": "^6.8.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.4.0",
