--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@emotion/styled": "^11.10.4",
 		"@next-auth/prisma-adapter": "^1.0.4",
 		"@prisma/client": "^4.5.0",
+		"@smastrom/react-rating": "^1.1.1",
 		"@supabase/supabase-js": "^1.35.6",
 		"axios": "^0.27.2",
 		"faunadb": "^4.7.0",
