--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.4.0",
-		"react-textarea-autosize": "^8.3.4"
+		"react-textarea-autosize": "^8.3.4",
+		"swr": "^1.3.0"
 	},
 	"devDependencies": {
 		"eslint": "^8.23.1",
