--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.4.0",
+		"react-spinners": "^0.13.6",
 		"react-textarea-autosize": "^8.3.4",
 		"swr": "^1.3.0"
 	},
