--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"axios": "^0.27.2",
 		"faunadb": "^4.7.0",
 		"framer-motion": "^7.3.2",
+		"handlebars": "^4.7.7",
 		"next": "^12.3.0",
 		"next-auth": "^4.10.3",
 		"nextjs-progressbar": "^0.0.16",
