--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,24 @@
+// {
+// 	"root": true,
+// 	"extends": "next",
+// 	"rules": {
+// 		"no-unused-vars": [
+// 			"error",
+// 			{
+// 				"argsIgnorePattern": "^_",
+// 				"varsIgnorePattern": "^_"
+// 			}
+// 		]
+// 	}
+// }
+
 {
-	"root": true,
-	"extends": "next",
+	"extends": "eslint:recommended",
 	"rules": {
-		"no-unused-vars": [
-			"error",
-			{
-				"argsIgnorePattern": "^_",
-				"varsIgnorePattern": "^_"
-			}
-		]
+		"consistent-return": 2,
+		"indent": [1, 4],
+		"no-else-return": 1,
+		"semi": [1, "always"],
+		"space-unary-ops": 2
 	}
 }
