--- a/package.json
+++ b/package.json
@@ -8,23 +8,25 @@
 		"build": "next build",
 		"prettier": "prettier -write .",
 		"lint": "next lint",
-		"start": "next start"
+		"start": "next start",
+		"vercel-build": "prisma generate && prisma migrate deploy && next build",
+		"prisma:generate": "prisma generate"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"@chakra-ui/icons": "^2.0.9",
-		"@chakra-ui/react": "^2.3.2",
-		"@emotion/react": "^11.10.4",
-		"@emotion/styled": "^11.10.4",
+		"@chakra-ui/react": "^2.4.4",
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
 		"@next-auth/prisma-adapter": "^1.0.4",
 		"@prisma/client": "^4.7.1",
 		"@smastrom/react-rating": "^1.1.1",
 		"@supabase/supabase-js": "^1.35.6",
 		"axios": "^0.27.2",
 		"faunadb": "^4.7.0",
-		"framer-motion": "^7.3.2",
+		"framer-motion": "^7.10.2",
 		"handlebars": "^4.7.7",
 		"next": "^12.3.0",
 		"next-auth": "^4.10.3",
