--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 		"build": "next build",
 		"prettier": "prettier -write .",
 		"lint": "next lint",
-		"start": "next start",
-		"vercel-build": "prisma generate && prisma db push && next build"
+		"start": "next start"
 	},
 	"keywords": [],
 	"author": "",
