--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
 		"@next-auth/prisma-adapter": "^1.0.4",
 		"@prisma/client": "^4.8.0",
 		"@smastrom/react-rating": "^1.1.1",
-		"@supabase/supabase-js": "^1.35.6",
+		"@supabase/supabase-js": "^1.35.7",
 		"axios": "^0.27.2",
+		"base64-arraybuffer": "^1.0.2",
 		"faunadb": "^4.7.0",
 		"framer-motion": "^7.10.2",
 		"handlebars": "^4.7.7",
+		"nanoid": "^4.0.0",
 		"next": "^12.3.0",
 		"next-auth": "^4.10.3",
 		"nextjs-progressbar": "^0.0.16",
